<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.FragmentDetails"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/details_art_holder"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:scaleType="centerCrop"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/details_art_image"
            app:srcCompat="@color/black"/>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/details_art_name"
            android:hint="@string/enter_name"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/details_artist_name"
            android:hint="@string/enter_artist_name"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/details_art_year"
            android:hint="@string/enter_art_year"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/details_art_save"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

</androidx.appcompat.widget.LinearLayoutCompat>