<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:scaleType="centerCrop"
            app:srcCompat="@color/black"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/artImage"/>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:textStyle="bold"
            android:textSize="19sp"
            android:text="@string/art_name"
            android:id="@+id/priv_row_art_name"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            android:text="@string/artist_name"
            android:id="@+id/priv_row_artist_name"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            android:text="@string/art_release_year"
            android:id="@+id/priv_row_art_year"/>






    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>